--- a/FenXingFormDemo/TopicScreen.resx
+++ b/FenXingFormDemo/TopicScreen.resx
@@ -125,4 +125,10 @@
         AAAAAQAAAAAAAAAAAAAAAAwAAAAQBwAA5C0AAAEiAAAL
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>197, 17</value>
+  </metadata>
+  <metadata name="backgroundWorker2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>371, 17</value>
+  </metadata>
 </root>
